# mpv_socks

./: .gitignore  ChildProcess.h  Interface.cpp  Interface.h  Interface_socks.cpp  Interface_stdin.cpp  LineUnixSocket.h  MpvController.h  MpvSocket.h  PropertyGetter.h  README.md  RecvThread.h  UnixSocket.h  main.cpp  meson.build
